<resources>
    <string name="app_name">Ehelp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_find_password">FindPassword</string>
    <string-array name="question">
        <item>你的出生地</item>
        <item>你的学号</item>
        <item>你父母的名字</item>
        <item>你配偶的名字</item>
    </string-array>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="title_activity_send_help">SendHelp</string>
    <string name="title_activity_send_question">SendQuestion</string>
    <string name="title_activity_send_sos">SendSOS</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_contactlist">ContactlistActivity</string>
    <string name="title_activity_adapterchat">adapterchatActivity</string>
    <string name="title_activity_homepage">homepageActivity</string>
    <string name="title_activity_usermes">UsermesActivity</string>
    <string name="title_activity_message">messageActivity</string>
    <string name= "mes_username">用户名</string>
    <string name="mes_nickname">昵称</string>
    <string name="mes_title">个人信息</string>
    <string name="mes_file">性别</string>
    <string name="mes_user1">男</string>
    <string name="mes_user2">女</string>
    <string name="mes_user3">用户信息</string>
    <string name="mes_account">我的账号</string>
    <string name="mes_page">个人主页</string>
    <string name="mes_friends">通讯录</string>
    <string name="mes_healthcard">健康卡</string>
    <string name="mes_bank">爱心银行</string>
    <string name="mes_news">我参与的</string>
    <string name="mes_help">帮助</string>
    <string name="mes_setting">设置</string>
    <string name="mes_phone">手机号</string>
    <string name="mes_local">所在地</string>
    <string name="mes_age">年龄</string>
    <string name="mes_birth">生日</string>
    <string name="mes_detail">详细信息</string>
    <string name="mes_job">个人职业</string>
    <string name="mes_job1">学生</string>
    <string name="mes_job2">教师</string>
    <string name="mes_job3">工人</string>
    <string name="mes_job4">警察</string>
    <string name="mes_job5">消防员</string>
    <string name="mes_job6">其他</string>
    <string name="mes_addcontact">添加为紧急联系人</string>
    <string name="mes_deletefriend">删除好友</string>
    <string name="title_activity_bmap_api_demo_main">BMapApiDemoMain</string>
    <string name="title_activity_comment">Comment</string>
    <string name="title_activity_myhistory">Myhistory</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>
    <string name="mes_editname">编辑用户名</string>
    <string name="mes_editlocation">编辑所在地</string>
    <string name="mes_editbirthday">编辑生日</string>
    <string name="mes_contactlist">联系人列表</string>
    <string name="mes_accept_push_or_not">是否接受推送消息</string>
    <string name="mes_privacy_setting">隐私设置</string>
    <string name="mes_account_safe">账户与安全</string>
    <string name="mes_version_update">版本更新</string>
    <string name="mes_about_us">关于我们</string>
    <string name="mes_exit">退出登录</string>
    <string name="mes_change_password">修改密码</string>
    <string name="mes_change_phone">修改绑定手机号</string>
    <string name="mes_present_account">当前账号</string>
    <string name="mes_present_password">当前密码</string>
    <string name="mes_new_password">新的密码</string>
    <string name="mes_confirm_password">确认密码</string>
    <string name="mes_confirm">确认</string>
    <string name="mes_new_phone_number">新手机号</string>
    <string name="mes_verification_code">发送验证码</string>
    <string name="mes_input_verification_code">请输入验证码</string>
    <string name="mes_verification">验证</string>
    <string name="title_activity_mesnotename">MesnotenameActivity</string>
    <string name="title_activity_register_password">RegisterPassword</string>
    <string name="title_activity_health">Health</string>
    <string name="title_activity_question_detail">QuestionDetail</string>
    <string name="title_activity_count_num">CountNum</string>
    <string name="count_num">放弃求救</string>
    <string name="title_activity_sendhelp_map">sendhelp_map</string>
    <string name="title_activity_sendsos_map">sendsos_map</string>
    <string name="title_activity_recievesos_map">recievesos_map</string>
    <string name="title_activity_sendhelpcomeback_map">sendhelpcomeback_map</string>
    <string name="title_activity_recieve_help_ans_map">recieve_help_ans_map</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_accountsafe">AccountsafeActivity</string>
    <string name="title_activity_changepassword">ChangepasswordActivity</string>
    <string name="action_search">Search</string>
    <string name="title_activity_changephone">ChangephoneActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_my_history">MyHistory</string>
    <string name="title_activity_add_ans">AddAns</string>
    <string name="title_activity_home_map">HomeMapActivity</string>

    <!-- 用于通过唯一的identificationCode获取 -->
    <string name="rfab_identification_code_fragment_a">RFAB_IDENTIFICATION_CODE_FRAGMENT_A</string>
    <string name="rfab_identification_code_fragment_b">RFAB_IDENTIFICATION_CODE_FRAGMENT_B</string>
    <string name="rfab_identification_code_fragment_c">RFAB_IDENTIFICATION_CODE_FRAGMENT_C</string>
    <string name="title_activity_home_sos">HomeSOSActivity</string>
    <string name="title_activity_home_help">HomeHelpActivity</string>
    <string name="title_activity_home_que">HomeQueActivity</string>
    <string name="title_activity_end_sos">EndSosActivity</string>
    <string name="title_activity_excontactlist">ExcontactlistActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="title_activity_response">ResponseActivity</string>
    <string name="title_activity_bank">BankActivity</string>
    <string name="title_activity_integral">IntegralActivity</string>
    <string name="title_activity_coin">CoinActivity</string>
    <string name="title_activity_basic_info">BasicInfoActivity</string>
    <string name="title_activity_othershealthcard">OthershealthcardActivity</string>
    <string name="title_activity_end_help">EndHelpActivity</string>
    <string name="title_activity_conversation_list">ConversationActivity</string>
    <string name="toolbar_title">个人主页</string>
    <string name="title_activity_fans_list">FansListActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="title_activity_transfer">TransferActivity</string>
    <string name="title_activity_respond_people">RespondPeopleActivity</string>
    <string name="hello">Hello World, MainActivity!</string>



    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
    <string name="button_track">查看轨迹</string>
    <string name="button_login">登录</string>
    <string name="button_register">注册</string>
    <string name="button_back">返回</string>
    <string name="button_next">下一步</string>
    <string name="button_submit">提交</string>
    <string name="button_send">发送</string>
    <string name="button_cancel">取消</string>
    <string name="button_close">关闭</string>
    <string name="setting_text_exit">退出登录</string>
    <string name="button_call">拨打客服电话</string>
    <string name="button_save">保存</string>
    <string name="button_group">群组</string>
    <string name="button_queding">确定</string>
    <string name="button_search">搜索</string>
    <string name="button_query">查找</string>
    <string name="button_menu">菜单</string>
    <string name="button_refresh">刷新</string>
    <string name="button_add">添加</string>
    <string name="button_invite">邀请</string>
    <string name="button_upload">上传资料</string>
    <string name="button_delexit">删除并退出</string>
    <string name="button_del">删除</string>
    <string name="button_jiesan">解散该群</string>
    <string name="button_fabiao">发表</string>
    <string name="button_advice">评论</string>
    <string name="button_finish">完成</string>
    <string name="button_fabiaohuiying">发表回应</string>
    <string name="button_huiying">回应</string>
    <string name="button_verify">审核</string>
    <string name="button_bless">祝福</string>
    <string name="button_send_code">发送验证码</string>
    <string name="button_agree">同意</string>
    <string name="button_refuse">拒绝</string>
    <string name="button_photo_add">相册添加</string>
    <string name="button_take_add">拍照添加</string>
    <string name="takepicture">拍照</string>
    <string name="fouse">对焦</string>
    <string name="select_all">全选</string>


    <string name="home_text_chat">聊天</string>
    <string name="home_text_score">成绩</string>
    <string name="home_text_book">通讯录</string>
    <string name="home_text_notice">公告</string>
    <string name="home_text_more">更多</string>


    <string name="login_title">登录</string>
    <string name="login_username">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_confirm_password">确认密码</string>
    <string name="login_username_edit"></string>
    <string name="login_password_edit"></string>
    <string name="login_forget">找回密码</string>
    <string name="login_cb_mima">记住密码</string>
    <string name="login_cb_auto">自动登录</string>

    <string name="register_name_one">姓名:</string>
    <string name="register_dept_one">部门:</string>
    <string name="register_email_one">邮箱:</string>
    <string name="register_phone_one">电话:</string>





    <string name="user_main_text_login">登录</string>
    <string name="user_main_text_register">注册</string>
    <string name="user_find_pass">找回密码</string>
    <string name="user_update_pass">修改密码</string>
    <string name="user_update_oldpass">原密码</string>
    <string name="user_update_newpass">新密码</string>
    <string name="user_update_confirmpass">确认密码</string>
    <!-- BBS -->
    <string name="bbs_main_title">BBS</string>
    <string name="bbs_main_send">发帖</string>
    <string name="bbs_send_title">标题:</string>
    <string name="bbs_send_content">内容</string>

    <!-- log -->
    <string name="log_main_title">日志</string>
    <string name="log_main_write">写日志</string>
    <string name="log_main_detail">日志详情</string>
    <string name="log_time">时间</string>


    <!-- video -->
    <string name="video_main_text">视频回传</string>



    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="title_activity_coinhistory">CoinhistoryActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
</resources>
