<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd"
    android:id="@+id/accountsafe_change_phone">
    <include layout="@layout/toolbar" />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_phone1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/mes_present_account"
            android:id="@+id/accountsafe_change_phone2"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountsafe_change_phone3"
            android:layout_toRightOf="@+id/accountsafe_change_phone2"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_phone4">
        <EditText
            android:id="@+id/accountsafe_change_phone5"
            android:layout_marginLeft="20dp"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="#fff"
            android:textColor="#000"
            android:textSize="15sp"
            android:hint="@string/mes_new_phone_number"/>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/accountsafe_change_phone5"
            android:text="@string/mes_verification_code"
            android:background="#00cc33"
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:textSize="15dp"
            android:id="@+id/accountsafe_change_phone6"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_password7">
        <EditText
            android:id="@+id/accountsafe_change_phone8"
            android:layout_marginLeft="20dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:textColor="#000"
            android:textSize="15sp"
            android:hint="@string/mes_input_verification_code"/>
    </RelativeLayout>
    <Button android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/accountsafe_change_phone9"
        android:text="@string/mes_verification"
        android:background="#00cc33"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="65dp" />
</LinearLayout>