<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd"
    android:id="@+id/accountsafe_change_password">
    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_password1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/mes_present_account"
            android:id="@+id/accountsafe_change_password2"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountsafe_change_password3"
            android:layout_toRightOf="@+id/accountsafe_change_password2"
            android:layout_marginLeft="50dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_password4">
        <EditText
            android:id="@+id/accountsafe_change_password5"
            android:layout_marginLeft="20dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:textColor="#000"
            android:textSize="15sp"
            android:password="true"
            android:hint="@string/mes_present_password"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_password6">
        <EditText
            android:id="@+id/accountsafe_change_password7"
            android:layout_marginLeft="20dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:textColor="#000"
            android:textSize="15sp"
            android:password="true"
            android:hint="@string/mes_new_password"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_password8">
        <EditText
            android:id="@+id/accountsafe_change_password9"
            android:layout_marginLeft="20dp"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#fff"
            android:textColor="#000"
            android:textSize="15sp"
            android:password="true"
            android:hint="@string/mes_confirm_password"/>
    </RelativeLayout>
    <Button android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/accountsafe_change_password10"
        android:text="@string/mes_confirm"
        android:background="#00cc33"
        android:textColor="#fff"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:onClick="check_password"/>
</LinearLayout>