<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ddd">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/preference_item"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_phone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/mes_phone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:src="@drawable/mm_submenu" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="20dp"
        android:layout_height="1dp"
        android:layout_width="fill_parent"
        android:background="#ddd"/>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/preference_item"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_password"
        android:onClick="change_password_page_click">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/mes_change_password"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:src="@drawable/mm_submenu" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:background="@drawable/preference_item"
        android:gravity="center_vertical"
        android:id="@+id/accountsafe_change_phone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="@string/mes_change_phone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="matrix"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:src="@drawable/mm_submenu" />
    </RelativeLayout>
</LinearLayout>